--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -175,6 +175,7 @@ header{
       }
   }
   h2#map-title{
+    @include row();
     padding: 7px 20px;
     font-size: 18px;
     font-weight: bold;
@@ -182,6 +183,15 @@ header{
     box-shadow: 3px 3px 5px lightgrey;
     color: var(--yellow);
     background-color: var(--green);
+    button{
+      margin-left: 5px;
+      padding: 0px;
+      color: var(--yellow);
+      font-weight: bold;
+      &:hover{
+        text-shadow: 0px 0px 3px var(--yellow);
+      }
+    }
   }
   .account-button{
     border: none;
@@ -248,6 +258,10 @@ main{
   
 }
 
+#account{
+  @include center();
+}
+
 #docs-list{
   padding: 0px;
   margin: 20px 0px;
@@ -280,6 +294,24 @@ main{
       }
     }
   }
+}
+
+.save-banner{
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  padding: 10px;
+  background-color: var(--blue);
+  color:white;
+  z-index: 20;
+  font-weight: bold;
+  border-bottom-right-radius: 8px;
+  span{
+    color: red;
+    margin-right: 5px;
+    text-shadow: 1px 1px 2px pink;
+  }
+  box-shadow: 2px 2px 3px grey;
 }
 
 .algorithm-button{
@@ -338,6 +370,21 @@ main{
       font-weight: bold;
     }
   }
+}
+
+.new-param{
+  max-width: 360px;
+  h4{
+    font-size: 24px;
+    margin-bottom: 20px;
+    margin-top: 0px
+  }
+  .sb{
+    padding: 5px 10px;
+    font-weight: 100;
+    margin-left: 5px;
+  }
+  
 }
 
 #parameters{
@@ -504,6 +551,7 @@ main{
     margin-top: 10px;
     .show-district{
       @include row();
+
       .color-box{
         margin-right: 5px;
       }
@@ -623,7 +671,7 @@ main{
 
 
 #list-view{
-    padding: 0px 30px;
+    padding-left: 30px;
     min-width: 30vw;
   .edit-row{
     @include row();
@@ -719,8 +767,14 @@ main{
         margin: 0px 20px;
         .show-district{
           @include row();
+          @include hoverer1();
+          font-size: 16px;
+          border: none;
+          background-color: none;
+          padding: 0px;
+          background-color: transparent;
           .color-box{
-            margin-right: 5px;
+            margin-right: 7px;
           }
         }
       }
