--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -155,7 +155,17 @@ a {
       top: 5px;
       right: 5px;
     }
+    h4{
+      font-size: 24px;
+      font-weight: bold;
+      margin-top: 0px;
+      margin-bottom: 20px;
+    }
   }
+}
+
+.ml5{
+  margin-left: 5px;
 }
 
 header{
@@ -260,23 +270,40 @@ main{
 
 #account{
   @include center();
+  min-height: 70vh;
+}
+
+h3.mymaps{
+  font-size: 30px;
+  margin: 30px 0px;
 }
 
 #docs-list{
   padding: 0px;
   margin: 20px 0px;
   list-style: none;
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
   li.single-doc{
-    border: 2px solid grey;
-    padding: 15px 20px;
-    margin: 20px 0px;
+    width: auto;
+    margin: 20px auto;
     border-radius: 10px;
+    //background-color: lightgray;
+    //box-shadow: 3px 3px 5px black;
+    padding: 15px 20px;
+    .left{
+      font-size: 40px;
+      @include center();
+      padding: 20px 0px;
+    }
+    .right{
     h5{
       margin: 0px;
       font-size: 20px
     }
     p{
       margin: 10px 0px ;
+    }
     }
   }
 }
