--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -242,8 +242,23 @@ main{
 
 #default-frontpage{
   width: 100%;
-  height: 100vh;
-  @include center();
+  height: 80vh;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  margin-bottom: 10vh;
+  margin-top: 30px;
+  .left{
+    height: 100%;
+    background-color: rgb(230, 230, 230);
+    padding: 20px 30px;
+    overflow-y: scroll;
+    margin-right: 30px;
+  }
+  .right{
+    height: 100%;
+    padding: 0px 3vw;
+    @include center();
+  }
 }
 
 #auth{
