--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,14 +5,26 @@
   align-items: center;
 }
 
+.row{
+  @include row();
+}
+
 @mixin col(){
   @include row();
   flex-direction: column;
 }
 
+.col{
+  @include col();
+}
+
 @mixin center(){
   @include row();
   justify-content: center;
+}
+
+.center{
+  @include center();
 }
 
 @mixin hoverer1{
@@ -337,17 +349,18 @@ h3.mymaps{
     padding: 15px 20px;
     .left{
       font-size: 40px;
+      height: 40px;
       @include center();
       padding: 20px 0px;
     }
     .right{
-    h5{
-      margin: 0px;
-      font-size: 20px
-    }
-    p{
-      margin: 10px 0px ;
-    }
+      h5{
+        margin: 0px;
+        font-size: 20px
+      }
+      p{
+        margin: 10px 0px ;
+      }
     }
   }
 }
@@ -469,6 +482,7 @@ h3.mymaps{
     margin-bottom: 10px;
   }
   #p-list{
+    min-height: 30px;
     padding: 0px;
     @include row();
     flex-wrap: wrap;
