first charts working

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1057,6 +1057,10 @@ h3.mymaps {
   }
 }
 
+.barchart-container{
+  overflow-x: scroll;
+}
+
 footer {
   @include center();
   background-color: black;
