--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1057,6 +1057,17 @@ h3.mymaps {
   }
 }
 
+.chart-area{
+  width: 100%;
+  h6{
+    width: 100%;
+    text-align: center;
+    font-size: 26px;
+    margin: 0px;
+    margin-bottom: 20px;
+  }
+}
+
 .barchart-container{
   overflow-x: scroll;
   height: 500px;
