--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1059,6 +1059,7 @@ h3.mymaps {
 
 .chart-area{
   width: 100%;
+  margin: 30px;
   h6{
     width: 100%;
     text-align: center;
@@ -1070,7 +1071,6 @@ h3.mymaps {
 
 .barchart-container{
   overflow-x: scroll;
-  height: 500px;
 }
 
 footer {
