--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -907,7 +907,8 @@ h3.mymaps {
 }
 
 #algorithm-popup {
-  max-width: 300px;
+  max-width: 800px;
+  width: 90vw;
   h5 {
     font-size: 24px;
     margin-bottom: 10px;
