--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -921,6 +921,36 @@ h3.mymaps {
       color: rgb(0, 0, 99);
     }
   }
+
+  section#algo-settings{
+    h6{
+      margin: 20px 0px;
+      font-size: 20px;
+    }
+    .toggle-buttons{
+      button{
+        @include hoverer1();
+        font-size: 15px;
+        margin-right: 15px;
+        border: 2px solid black;
+        color: black;
+        padding: 3px 5px;
+        transition: all 0.2s;
+        background-color: white;
+        &.focus{
+          background-color: black;
+          color:white;
+        }
+      }
+    }
+    .description-note{
+      margin: 0px;
+      margin-top: 10px;
+      margin-bottom: 20px;
+      font-size: 14px;
+      
+    }
+  }
 }
 
 #analysis-container {
