--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -950,6 +950,9 @@ h3.mymaps {
       font-size: 14px;
 
     }
+    input{
+      max-width: 70px;
+    }
   }
 }
 
@@ -1110,6 +1113,41 @@ h3.mymaps {
   width: 400px;
   z-index: 10;
   position: absolute;
+
+  #algorithm-header{
+    @include row();
+    justify-content:  space-between;
+    color: white;
+    background-color: black;
+    padding: 10px 15px;
+    h4{
+      margin: 0px;
+      font-size: 18px;
+      @include row();
+      .icon{
+        height: 18px;
+        margin-right: 5px;
+        color:white;
+      }
+      .link{
+        font-size: 12px;
+        margin-left: 15px;
+        color: lightgrey;
+        @include hoverer1();
+      }
+    }
+    .terminate-button{
+      background-color: transparent;
+      border: none;
+      color: red;
+      font-size: 12px;
+      @include hoverer1();
+      @include center();
+      .sir{
+        height: 14px;
+      }
+    }
+  }
   section{
     padding: 15px 30px;
     &.clickable{
