add extra check for draggable header mouseup on window

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1113,6 +1113,7 @@ h3.mymaps {
   width: 400px;
   z-index: 10;
   position: absolute;
+  box-shadow: 2px 2px 10px darkgray;
 
   hr{
     margin: 0px;
