import and export components in scaffold

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -257,8 +257,8 @@ header {
       height: 20px;
     }
   }
-  #save-and-import {
-    .save-button {
+  #export {
+    button {
       background-color: var(--blue);
       border: none;
       padding: 8px 20px;
