--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -257,23 +257,25 @@ header {
       height: 20px;
     }
   }
-  #export {
-    button {
-      background-color: var(--blue);
-      border: none;
-      padding: 8px 20px;
-      border-radius: 5px;
-      box-shadow: 3px 3px 5px lightgrey;
-      color: white;
-      @include hoverer1();
-      font-size: 16px;
-      font-weight: bold;
-      @include row();
-      .save-icon {
-        margin-right: 5px;
-        font-size: 20px;
-        height: 20px;
-      }
+}
+
+#export {
+  .export-button {
+    background-color: var(--blue);
+    border: none;
+    padding: 5px 20px;
+    margin-right: 10px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 5px lightgrey;
+    color: white;
+    @include hoverer1();
+    font-size: 16px;
+    font-weight: bold;
+    @include row();
+    .save-icon {
+      margin-right: 5px;
+      font-size: 20px;
+      height: 20px;
     }
   }
 }
