--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -355,6 +355,70 @@ header {
   }
 }
 
+#home-popup{
+  position: fixed;
+  z-index: 101;
+  bottom: 0px;
+  left: 0px;
+  width: 100vw;
+  background-color: black;
+  color:white;
+  padding: 3vh 3vw;
+  box-shadow: 0px -5px 10px grey;
+  .x-button{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: red;
+    .sir{
+      height: 20px;
+    }
+  }
+  div.top-section{
+    margin: 0px;
+    margin-bottom: 20px;
+    h3{
+      font-size: 36px;
+      margin: 0px;
+    }
+    p{
+      font-size: 15px;
+      color: lightgrey;
+      margin: 0px;
+    }
+  }
+  ul{
+    @include row();
+    padding: 30px 0px;
+    overflow-x: scroll;
+    li{
+      background-color: rgb(202, 202, 202);
+      padding: 20px;
+      color:black;
+      margin-right: 30px;
+      .map-name{
+        font-weight: bold;
+        font-size: 24px;
+      }
+      .map-districts{
+        font-size: 16px;
+        font-weight: bold;
+      }
+      .buttons{
+        @include row();
+        margin: 15px 0px;
+        .draw-district{
+          background-color: rgb(5, 161, 0);
+          margin-right: 20px;
+        }
+      }
+      .map-info{
+        font-size: 12px;
+      }
+    }
+  }
+}
+
 #export {
   .export-button {
     background-color: var(--blue);
