--- a/styles/dev.scss
+++ b/styles/dev.scss
@@ -6,6 +6,7 @@
         border-radius: 5px;
         margin: 20px 0px;
         background-color: rgb(231, 231, 231);
+        width: 400px;
         &:focus{
             outline: none;
             background-color: white;
