--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -217,7 +217,6 @@ header {
   border-bottom: 1px solid black;
   @include row();
   justify-content: space-between;
-  margin-bottom: 60px;
   background-color: rgb(255, 255, 255);
   //box-shadow: 0px 5px 10px darkgrey;
   h1 {
@@ -355,6 +354,11 @@ header {
   }
 }
 
+#home-section{
+  font-weight: bold;
+  margin-bottom: 100px;
+}
+
 #home-popup{
   position: fixed;
   z-index: 101;
@@ -367,11 +371,11 @@ header {
   box-shadow: 0px -5px 10px grey;
   .x-button{
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 3vh;
+    right: 3vw;
     color: red;
     .sir{
-      height: 20px;
+      height: 30px;
     }
   }
   div.top-section{
@@ -398,7 +402,7 @@ header {
       margin-right: 30px;
       .map-name{
         font-weight: bold;
-        font-size: 24px;
+        font-size: 30px;
       }
       .map-districts{
         font-size: 16px;
@@ -408,8 +412,13 @@ header {
         @include row();
         margin: 15px 0px;
         .draw-district{
+          font-size: 18px;
           background-color: rgb(5, 161, 0);
           margin-right: 20px;
+        }
+        .view-map{
+          font-size: 14px;
+          font-weight: 600;
         }
       }
       .map-info{
@@ -755,7 +764,7 @@ h3.mymaps {
   .first-row {
     input {
       margin: 0px 5px;
-      width: 40px;
+      width: 60px;
     }
     .sb {
       margin-left: 5px;
