--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1156,7 +1156,7 @@ h3.mymaps {
   }
   .recalc-button-container {
     @include center();
-    .recalc-button {
+    .calc-button {
       padding: 8px 15px;
       font-size: 18px;
       border-radius: 10px;
@@ -1164,6 +1164,12 @@ h3.mymaps {
       @include buttonStyle();
       box-shadow: none;
       margin: 5vh 0px;
+      &.re{
+        background-color: #c22929;
+        box-shadow: 0px 0px 10px black;
+        color: white;
+
+      }
     }
   }
 
