make terminate button more clickable

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1343,7 +1343,8 @@ h3.mymaps {
       }
     }
     .terminate-button{
-      background-color: transparent;
+      background-color: black;
+      padding: 3px;
       border: none;
       color: red;
       font-size: 12px;
