--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1344,7 +1344,7 @@ h3.mymaps {
     }
     .terminate-button{
       background-color: black;
-      padding: 3px;
+      padding: 5px;
       border: none;
       color: red;
       font-size: 12px;
@@ -1401,6 +1401,88 @@ h3.mymaps {
   }
 }
 
+#datastore{
+  ul{
+    margin-bottom: 20vh;
+    li{
+      margin: 30px;
+      .map-name{
+        font-size: 24px;
+        font-weight: bold;
+      }
+      .map-districts{
+        font-size: 16px;
+        font-weight: bold;
+        margin: 0px;
+      }
+      .map-info{
+        font-size: 14px;
+        margin: 10px 0px;
+      }
+      .filelink{
+        font-weight: bold;
+        @include hoverer1();
+        color: rgb(0, 156, 0);
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+
+.page-header{
+  padding: 5vh 20px;
+  background-color: lightgrey;
+  margin: 30px 0px;
+  h2{
+    font-size: 30px;
+    font-weight: bold;
+    margin: 0px;
+  }
+  p{
+    font-size: 16px;
+    margin: 0px
+  }
+}
+
+#people-list{
+  margin: 10vh 0px 20vh 0px;
+  li{
+    @include row();
+    .person-image{
+      width: 120px;
+      height: 120px;
+      border-radius: 10%;
+      background-size: cover;
+      background-position: center;
+      box-shadow: 0px 0px 5px grey;
+    }
+    .p-info{
+      margin-left: 40px;
+      .p-name{
+        font-size: 24px;
+        font-weight: bold;
+      }
+      .p-position{
+        font-weight: bold;
+        margin: 0px;
+        font-size: 18px;
+        color: rgb(104, 104, 104);
+      }
+      .p-description{
+        font-size: 15px;
+      }
+      .p-email{
+        a{
+          font-weight: bold;
+          text-decoration: underline;
+          color: green;
+        }
+      }
+    }
+
+  }
+}
 
 footer {
   @include center();
