--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1433,6 +1433,7 @@ h3.mymaps {
 .page-header{
   padding: 5vh 20px;
   background-color: lightgrey;
+  box-shadow: 3px 3px 5px rgb(119, 119, 119);
   margin: 30px 0px;
   h2{
     font-size: 30px;
